<resources>
    <string name="app_name">快乐数独</string>
    <string name="sudoku">Happy Sudoku</string>
    <string name="norwegian_description">A picture of a norwegian flag</string>
    <string name="british_description">A picture of a british flag</string>

    <string name="new_game">Start New Game</string>
    <string name="add_new_board">Add new board</string>
    <string name="continue_new_board">Continue</string>
    <string name="successful_new_board">New board saved</string>
    <string name="fail_new_board">Failed to save new board</string>
    <string name="show_instructions">Show instructions</string>
    <string name="choose_language">Choose language:</string>

    <string name="ranking_list">Ranking List</string>

    <string name="instructions">Instructions</string>
    <string name="instructions_1">1. In Sudoku it is intended to place all the remaining pieces on the board. The numbers range from 1 to 9 (in 9x9 Sudoku).</string>
    <string name="instructions_2">2. The board is separated into several squares, and inside each of them it is only allowed to place one of each number.</string>
    <string name="instructions_3">3. It is only allowed to place one of each number at each row, both horizontal and vertical.</string>
    <string name="go_back_button">Go back</string>

    <string name="choose_difficulty">Choose difficulty:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="start_game">Start Game</string>
    <string name="choose_number">Choose number</string>
    <string name="choose_a_number">Choose number to place:</string>
    <string name="place_number">Place number</string>
    <string name="piece_unsure">Mark piece as unsure</string>
    <string name="remove_piece">Remove piece</string>
    <string name="start_piece_error">Can not change start piece</string>
    <string name="check_board">Check board</string>
    <string name="board_correct">Board is correct</string>
    <string name="board_incorrect">Board is not correct</string>
    <string name="title_activity_rank_list">rank_listActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Player_ID">ID</string>
    <string name="Name">Name</string>
    <string name="Time">Time</string>
    <string name="Difficulty">Difficulty</string>
    <string name="Delete">Delete</string>
</resources>
