<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rank_listActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="RANK LIST"
        android:textSize="40sp"
        android:textColor="#F44336"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_baseline_format_list_numbered_24"/>


    <TextView
        android:id="@+id/tv_01"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv"
        android:layout_marginTop="10dp"
        android:text="@string/Player_ID"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_02"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="10dp"
        android:text="@string/Name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_03"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="10dp"
        android:text="@string/Time"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_04"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="10dp"
        android:text="@string/Difficulty"
        android:textSize="20sp" />


    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@+id/tv"
        android:layout_marginTop="74dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv"
        android:onClick="back"
        android:text="@string/go_back_button"
        android:textSize="15sp" />

<!--    <Button-->
<!--        android:id="@+id/button7"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/button3"-->
<!--        android:onClick="delete"-->
<!--        android:text="@string/Delete"-->
<!--        android:textSize="15sp" />-->

    <Button
        android:id="@+id/easy"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv"
        android:layout_marginLeft="90dp"
        android:onClick="easy"
        android:text="@string/difficulty_easy"
        android:textSize="15sp" />

    <Button
        android:id="@+id/normal"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv"
        android:layout_marginLeft="180dp"
        android:onClick="normal"
        android:text="@string/difficulty_normal"
        android:textSize="15sp" />

    <Button
        android:id="@+id/hard"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv"
        android:layout_marginLeft="270dp"
        android:onClick="hard"
        android:text="@string/difficulty_hard"
        android:textSize="15sp" />


    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.049"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.976" -->

</RelativeLayout>